--- a/landing.css
+++ b/landing.css
@@ -51,6 +51,16 @@ input[type=text]{
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+input[type=password]{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
 input[type=email]{
     width: 100%;
     padding: 12px 20px;
